fixed database but images not showing

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "firebase": "^12.1.0",
     "lucide-react": "^0.539.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "postcss": "^8.5.6",
