--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
-MONGO_URI=mongodb+srv://davidkiio297:goated1@cluster0.9kns7pp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://davidkiio297:goated1@cluster0.9kns7pp.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+SERVER_URL=http://localhost:5000
+
