--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 MONGO_URI=mongodb+srv://davidkiio297:goated1@cluster0.9kns7pp.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
-SERVER_URL=http://localhost:5000
+SERVER_URL=https://stay-bnbs-1.onrender.com
+
 
